--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -29,7 +29,7 @@
               <td>
                 <mat-form-field class="example-full-width" appearance="fill">
                   <mat-label>Collection</mat-label>
-                  <input matInput value="{{ element.desc }}">
+                  <input matInput value="{{ element.collection }}">
                 </mat-form-field>
               </td>
               <td>
