--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,6 +23,9 @@
           <mat-form-field appearance="outline">
             <mat-label>Enter your password</mat-label>
             <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" required>
+            <mat-error *ngIf="password && password.invalid">
+              {{ getErrorMessagePassword() }}
+            </mat-error>
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
               [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -33,7 +36,7 @@
         <div class="example-container">
           <mat-form-field appearance="outline">
             <mat-label>Confirm your password</mat-label>
-            <input formControlName="confirmPassword" [errorStateMatcher]="matcher" matInput [type]="hide ? 'password' : 'text'">
+            <input formControlName="confirmPassword" [errorStateMatcher]="matcher" matInput [type]="hide ? 'password' : 'text'" required>
             <mat-error *ngIf="registerForm.hasError('notSame')">
               Passwords do not match
             </mat-error>
@@ -59,15 +62,15 @@
             <mat-label>Enter your age</mat-label>
             <input formControlName="age" matInput placeholder="age" required>
             <mat-error *ngIf="age && age.invalid">{{getErrorMessageAge()}}</mat-error>
-
           </mat-form-field>
         </div>
       </div>
       <div class="col-4">
         <div class="example-container">
-          <mat-radio-group formControlName="gender" aria-label="Select an option">
+          <mat-radio-group formControlName="gender" aria-label="Select an option" required>
             <mat-radio-button value="man">Man</mat-radio-button>
             <mat-radio-button style="padding: 7%;" value="woman">Women</mat-radio-button>
+            <mat-error *ngIf="gender && gender.invalid">{{getErrorMessageGender()}}</mat-error>
           </mat-radio-group>
         </div>
 
