--- a/src/app/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/components/layouts/sidebar/sidebar.component.html
@@ -36,7 +36,19 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="layers"></span>
-              Integrations
+              Login
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="life-time">
+              <span data-feather="layers"></span>
+              Life time
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="youtube">
+              <span data-feather="layers"></span>
+              Application
             </a>
           </li>
         </ul>
@@ -44,7 +56,7 @@
     </nav>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-<!--      <app-product-list></app-product-list>-->
+      <!--      <app-product-list></app-product-list>-->
       <router-outlet></router-outlet>
     </main>
   </div>
