--- a/src/app/components/dictionary-detail/dictionary-detail.component.html
+++ b/src/app/components/dictionary-detail/dictionary-detail.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Youtube playlist</h1>
+  <h1 class="h2">Dictionary Detail</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
       <!--      <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="add">Add</button>-->
@@ -7,10 +7,9 @@
     </div>
   </div>
 </div>
-<mat-selection-list [multiple]="false">
-  <mat-list-option *ngFor="let song of playlist" [value]="song">
-    <p [routerLink]="['/youtube', song.id]">{{ song.name}}</p>
-  </mat-list-option>
-</mat-selection-list>
-
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<div class="card">
+  <div class="card-body">
+    <p>{{ word.mean }}</p>
+  </div>
+</div>
