--- a/src/app/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/components/layouts/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/products">
+            <a class="nav-link" routerLink="/products/list">
               <span data-feather="shopping-cart"></span>
               Products
             </a>
@@ -51,12 +51,17 @@
               Application
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/dictionary">
+              <span data-feather="layers"></span>
+              Dictionary
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-      <!--      <app-product-list></app-product-list>-->
       <router-outlet></router-outlet>
     </main>
   </div>
