--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <h1 class="h2">Product List</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
-      <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="add">Add</button>
+      <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="/products/add">Add</button>
       <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
     </div>
   </div>
